# ft_ls

./: CMakeLists.txt  lsq.h  main.c
libft/: Makefile  libft.h
